--- a/assets/bower.json
+++ b/assets/bower.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "backbone": "~1.0.0",
-    "underscore": "~1.4.4",
-    "jquery": "~1.9.1",
-    "backbone.localStorage": "~1.1.0",
+    "underscore": "*",
+    "jquery": "*",
+    "backbone.localStorage": "*",
     "backbone.googlemaps": "*"
   }
 }
