--- a/assets/bower.json
+++ b/assets/bower.json
@@ -6,6 +6,9 @@
     "underscore": "*",
     "jquery": "*",
     "backbone.localStorage": "*",
-    "backbone.googlemaps": "*"
+    "backbone.googlemaps": "*",
+    "alertify.js": "~0.3.11",
+    "screenfull": "~1.1.1",
+    "howler": "~1.1.16"
   }
 }
