--- a/assets/bower.json
+++ b/assets/bower.json
@@ -10,6 +10,8 @@
     "alertify.js": "~0.3.11",
     "screenfull": "~1.1.1",
     "howler": "~1.1.16",
-    "keymaster": "~1.6.1"
+    "keymaster": "~1.6.1",
+    "humane-js": "~3.1.0",
+    "faker": "~0.0.2"
   }
 }
