--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "grunt": "0.4.1",
     "sails-disk": "~0.9.0",
     "ejs": "0.8.4",
-    "optimist": "0.3.4"
+    "optimist": "0.3.4",
+    "bower": "~1.2.8"
   },
   "scripts": {
     "start": "node app.js",
-    "debug": "node debug app.js"
+    "debug": "node debug app.js",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "main": "app.js",
   "repository": "",
