--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,6 @@
     "screenfull": "~1.1.1",
     "howler": "~1.1.16",
     "keymaster": "~1.6.1",
-    "humane-js": "~3.1.0",
-    "faker": "~0.0.2"
+    "humane-js": "~3.1.0"
   }
 }
