--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "sails-disk": "~0.9.0",
     "ejs": "0.8.4",
     "optimist": "0.3.4",
-    "bower": "~1.2.8"
+    "bower": "~1.2.8",
+    "sails-mongo": "~0.9.7"
   },
   "scripts": {
     "start": "node app.js",
